5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/3558/executions/1621_2927.log
== TEST (2019-04-01 18:44:28) 
-- CODE:
S=3,0
R=3,5
E=1,5
T=2E+R
-- ERROR:
File "XXXX", line 4
    T=2E+R
        ^
SyntaxError: invalid token
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:44:59) 
-- CODE:
S=3,0
R=3,5
E=1,5
print(T=2E+R)
-- ERROR:
File "XXXX", line 4
    print(T=2E+R)
              ^
SyntaxError: invalid token
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:45:01) 
-- CODE:
S=3,0
R=3,5
E=1,5
print(T=2E+R)
-- ERROR:
File "XXXX", line 4
    print(T=2E+R)
              ^
SyntaxError: invalid token
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:45:03) 
-- CODE:
S=3,0
R=3,5
E=1,5
print(T=2E+R)
-- EXECUTION TIME:
0.203915
-- ERROR:
  File "/home/codebench/codes/1621/2927/main.py", line 4
    print(T=2E+R)
              ^
SyntaxError: invalid token

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:45:20) 
-- CODE:
S=3,0
R=3,5
E=1,5
print(2E+R)
-- ERROR:
File "XXXX", line 4
    print(2E+R)
            ^
SyntaxError: invalid token
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:45:34) 
-- CODE:
S=3,0
R=3,5
E=1,5
print(E+R)
-- OUTPUT:
(1, 5, 3, 5)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:45:46) 
-- CODE:
S=3,0
R=3,5
E=1,5
print(E+R)
-- EXECUTION TIME:
0.201758
-- TEST CASE 1:
---- input:
3
3
---- correct output:
7.5
---- user output:
(1, 5, 3, 5)
-- TEST CASE 2:
---- input:
3.5
4
---- correct output:
9.5
---- user output:
(1, 5, 3, 5)
-- TEST CASE 3:
---- input:
3
5
---- correct output:
10.5
---- user output:
(1, 5, 3, 5)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:45:50) 
-- CODE:
S=3,0
R=3,5
E=1,5
print(E+R)
-- OUTPUT:
(1, 5, 3, 5)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:46:02) 
-- CODE:
S=3,0
R=3,5
E=1,5
print(2E+R)
-- ERROR:
File "XXXX", line 4
    print(2E+R)
            ^
SyntaxError: invalid token
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:46:03) 
-- CODE:
S=3,0
R=3,5
E=1,5
print(2E+R)
-- ERROR:
File "XXXX", line 4
    print(2E+R)
            ^
SyntaxError: invalid token
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:46:47) 
-- CODE:
S=3,0
R=3,5
E=1,5
print(E+R)
-- OUTPUT:
(1, 5, 3, 5)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:47:56) 
-- CODE:
S=3,0
R=3,5
E=1,5
print(S+R)
-- OUTPUT:
(3, 0, 3, 5)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:48:13) 
-- CODE:
S=3,0
R=3,5
E=1,5
print(S*2+R)
-- OUTPUT:
(3, 0, 3, 0, 3, 5)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:48:25) 
-- CODE:
S=3,0
R=3,5
E=1,5
print(2*S+R)
-- OUTPUT:
(3, 0, 3, 0, 3, 5)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:48:26) 
-- CODE:
S=3,0
R=3,5
E=1,5
print(2*S+R)
-- OUTPUT:
(3, 0, 3, 0, 3, 5)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:48:28) 
-- CODE:
S=3,0
R=3,5
E=1,5
print(2*S+R)
-- EXECUTION TIME:
0.151554
-- TEST CASE 1:
---- input:
3
3
---- correct output:
7.5
---- user output:
(3, 0, 3, 0, 3, 5)
-- TEST CASE 2:
---- input:
3.5
4
---- correct output:
9.5
---- user output:
(3, 0, 3, 0, 3, 5)
-- TEST CASE 3:
---- input:
3
5
---- correct output:
10.5
---- user output:
(3, 0, 3, 0, 3, 5)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:48:28) 
-- CODE:
S=3,0
R=3,5
E=1,5
print(2*S+R)
-- OUTPUT:
(3, 0, 3, 0, 3, 5)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:49:34) 
-- CODE:
s=3,0
r=3,5
e=1,5
print(2*e+r)
-- OUTPUT:
(1, 5, 1, 5, 3, 5)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:49:43) 
-- CODE:
s=3,0
r=3,5
e=1,5
print(2e+r)
-- ERROR:
File "XXXX", line 4
    print(2e+r)
            ^
SyntaxError: invalid token
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:49:46) 
-- CODE:
s=3,0
r=3,5
e=1,5
print(2e+r)
-- ERROR:
File "XXXX", line 4
    print(2e+r)
            ^
SyntaxError: invalid token
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:49:47) 
-- CODE:
s=3,0
r=3,5
e=1,5
print(2e+r)
-- EXECUTION TIME:
0.221928
-- ERROR:
  File "/home/codebench/codes/1621/2927/main.py", line 4
    print(2e+r)
            ^
SyntaxError: invalid token

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:52:14) 
-- CODE:
s=3,0
r=3,5
e=3,0
print(e+r)
-- OUTPUT:
(3, 0, 3, 5)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:52:32) 
-- CODE:
s=3,0
r=3,5
e=3,0
print(e/r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(e/r)
TypeError: unsupported operand type(s) for /: 'tuple' and 'tuple'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:52:42) 
-- CODE:
s=3,0
r=3,5
e=3,0
print(e:r)
-- ERROR:
File "XXXX", line 4
    print(e:r)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:52:48) 
-- CODE:
s=3,0
r=3,5
e=3,0
print(e:
	r)
-- ERROR:
File "XXXX", line 4
    print(e:
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:52:49) 
-- CODE:
s=3,0
r=3,5
e=3,0
print(e:r)
-- ERROR:
File "XXXX", line 4
    print(e:r)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:52:50) 
-- CODE:
s=3,0
r=3,5
e=3,0
print(e:r)
-- ERROR:
File "XXXX", line 4
    print(e:r)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:52:51) 
-- CODE:
s=3,0
r=3,5
e=3,0
print(e:r)
-- ERROR:
File "XXXX", line 4
    print(e:r)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:53:41) 
-- CODE:
s=3,0
r=3,5
e=3,0
round(2e+r)
-- ERROR:
File "XXXX", line 4
    round(2e+r)
            ^
SyntaxError: invalid token
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:53:42) 
-- CODE:
s=3,0
r=3,5
e=3,0
round(2e+r)
-- ERROR:
File "XXXX", line 4
    round(2e+r)
            ^
SyntaxError: invalid token
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:53:47) 
-- CODE:
s=3,0
r=3,5
e=3,0
round(e+r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    round(e+r)
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:53:49) 
-- CODE:
s=3,0
r=3,5
e=3,0
round(e+r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    round(e+r)
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:53:51) 
-- CODE:
s=3,0
r=3,5
e=3,0
round(e+r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    round(e+r)
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:53:52) 
-- CODE:
s=3,0
r=3,5
e=3,0
round(e+r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    round(e+r)
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:53:53) 
-- CODE:
s=3,0
r=3,5
e=3,0
round(e+r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    round(e+r)
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:54:06) 
-- CODE:
s=3,0
r=3,5
e=3,0
print(e+r)
-- OUTPUT:
(3, 0, 3, 5)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:54:35) 
-- CODE:
s=3,0
r=3,5
e=3,0
round(2e+r)
-- ERROR:
File "XXXX", line 4
    round(2e+r)
            ^
SyntaxError: invalid token
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:54:41) 
-- CODE:
s=3,0
r=3,5
e=3,0
round(e+r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    round(e+r)
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:54:48) 
-- CODE:
s=3,0
r=3,5
e=3,0
round(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    round(e)
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:55:01) 
-- CODE:
s=3,0
r=3,5
e=3,0
round 2e+r
-- ERROR:
File "XXXX", line 4
    round 2e+r
            ^
SyntaxError: invalid token
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
